// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected at large width 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-panel-1 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-3 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        General
      </h3>
      <div
        class=""
        title="Use \\"Edit in Wizard\\" for staging experiments."
      >
        <button
          aria-label="Edit Experiment General Data"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
            Edit
          </span>
        </button>
      </div>
    </div>
    <table
      class="MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Status
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-root-7"
            >
              <span
                class="makeStyles-statusDot-12 makeStyles-staging-10"
              />
               
              staging
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Dates
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-root-13"
              title="20/09/2020, 20:00:00"
            >
              2020-09-21
            </span>
            <span
              class="makeStyles-to-2"
            >
              to
            </span>
            <span
              class="makeStyles-root-13"
              title="20/11/2020, 19:00:00"
            >
              2020-11-21
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Description
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-6"
            >
              Experiment with things. Change stuff. Profit.
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Owner
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-6"
            >
              owner-nickname
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            P2 Link
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-monospace-6 MuiTypography-colorPrimary"
              href="https://wordpress.com/experiment_1"
              rel="noopener noreferrer"
              target="_blank"
            >
              https://wordpress.com/experiment_1
            </a>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Assignment Cache Entry
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-6"
            >
              ✅ Fresh: Production cache is up to date, but manual sandbox updates may be needed
               (
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineAlways MuiTypography-colorPrimary"
                href="https://fieldguide.automattic.com/the-experimentation-platform/experiment-assignment-groups/#logged-out-homepage-assignments-use-file-system-cache"
                rel="noopener noreferrer"
                target="_blank"
              >
                learn more
              </a>
              )
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root makeStyles-panel-1 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-14 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root makeStyles-audienceTable-16"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-15"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-15"
            >
              Newly signed up users (being also logged in)
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-17"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Manual Assignment
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-20"
                  >
                    <span>
                      control
                    </span>
                    <br />
                    <span
                      class="makeStyles-root-22"
                    >
                      default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-20"
                  >
                    60
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-20"
                  >
                    <span
                      class="makeStyles-tooltipped-21"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-20"
                  >
                    <span>
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-20"
                  >
                    40
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-20"
                  >
                    <span
                      class="makeStyles-tooltipped-21"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-23"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-25"
                  >
                    segment_1
                     
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root makeStyles-root-23"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-25"
                  >
                    segment_2
                     
                    <span
                      class="makeStyles-root-22"
                    >
                      excluded
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-28"
            >
              <p
                class="MuiTypography-root makeStyles-monospace-29 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-27"
                  title="event_name"
                >
                  event_name
                </span>
                <span
                  class="makeStyles-entry-26"
                >
                  additionalProp1
                  : 
                  prop1Value
                </span>
                <span
                  class="makeStyles-entry-26"
                >
                  additionalProp2
                  : 
                  prop2Value
                </span>
                <span
                  class="makeStyles-entry-26"
                >
                  additionalProp3
                  : 
                  prop3Value
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-monospace-29 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-27"
                  title="event_without_props"
                >
                  event_without_props
                </span>
              </p>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exclusion Groups
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              aria-disabled="true"
              class="MuiChip-root Mui-disabled"
            >
              <span
                class="MuiChip-label"
              >
                tag_1
              </span>
            </div>
             
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-32 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Metrics
      </h3>
      <div
        class=""
        title="Use \\"Edit in Wizard\\" for staging experiments."
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
              />
            </svg>
            Assign Metric
          </span>
        </button>
      </div>
    </div>
    <table
      class="MuiTable-root makeStyles-metricsTable-33"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="columnheader"
            scope="col"
          >
            Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-35"
            role="columnheader"
            scope="col"
          >
            Attribution Window
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-35"
            role="columnheader"
            scope="col"
          >
            Changes Expected
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-35"
            role="columnheader"
            scope="col"
          >
            Minimum Difference
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-31 makeStyles-metricName-36"
              title="metric_1"
            >
              metric_1
            </strong>
            <br />
            <small
              class="makeStyles-monospace-31"
            >
              This is metric 1
            </small>
            <br />
            <span
              class="makeStyles-root-22"
            >
              primary
            </span>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            1 week
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            
            10
            <span
              class="makeStyles-tooltipped-21"
              title="Percentage points."
            >
              pp
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-31 makeStyles-metricName-36"
              title="metric_2"
            >
              metric_2
            </strong>
            <br />
            <small
              class="makeStyles-monospace-31"
            >
              This is metric 2
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            1 hour
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            
            0.50
             USD
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-31 makeStyles-metricName-36"
              title="metric_2"
            >
              metric_2
            </strong>
            <br />
            <small
              class="makeStyles-monospace-31"
            >
              This is metric 2
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            4 weeks
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            No
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            
            10.50
             USD
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-31 makeStyles-metricName-36"
              title="metric_3"
            >
              metric_3
            </strong>
            <br />
            <small
              class="makeStyles-monospace-31"
            >
              This is metric 3
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            6 hours
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            
            1200
            <span
              class="makeStyles-tooltipped-21"
              title="Percentage points."
            >
              pp
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders as expected at small width 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-panel-39 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-41 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        General
      </h3>
      <div
        class=""
        title="Use \\"Edit in Wizard\\" for staging experiments."
      >
        <button
          aria-label="Edit Experiment General Data"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
            Edit
          </span>
        </button>
      </div>
    </div>
    <table
      class="MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Status
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-root-45"
            >
              <span
                class="makeStyles-statusDot-50 makeStyles-staging-48"
              />
               
              staging
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Dates
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-root-51"
              title="20/09/2020, 20:00:00"
            >
              2020-09-21
            </span>
            <span
              class="makeStyles-to-40"
            >
              to
            </span>
            <span
              class="makeStyles-root-51"
              title="20/11/2020, 19:00:00"
            >
              2020-11-21
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Description
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-44"
            >
              Experiment with things. Change stuff. Profit.
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Owner
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-44"
            >
              owner-nickname
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            P2 Link
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-monospace-44 MuiTypography-colorPrimary"
              href="https://wordpress.com/experiment_1"
              rel="noopener noreferrer"
              target="_blank"
            >
              https://wordpress.com/experiment_1
            </a>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Assignment Cache Entry
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-44"
            >
              ✅ Fresh: Production cache is up to date, but manual sandbox updates may be needed
               (
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineAlways MuiTypography-colorPrimary"
                href="https://fieldguide.automattic.com/the-experimentation-platform/experiment-assignment-groups/#logged-out-homepage-assignments-use-file-system-cache"
                rel="noopener noreferrer"
                target="_blank"
              >
                learn more
              </a>
              )
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root makeStyles-panel-39 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-52 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root makeStyles-audienceTable-54"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-53"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-53"
            >
              Newly signed up users (being also logged in)
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-55"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Manual Assignment
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-58"
                  >
                    <span>
                      control
                    </span>
                    <br />
                    <span
                      class="makeStyles-root-60"
                    >
                      default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-58"
                  >
                    60
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-58"
                  >
                    <span
                      class="makeStyles-tooltipped-59"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-58"
                  >
                    <span>
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-58"
                  >
                    40
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-58"
                  >
                    <span
                      class="makeStyles-tooltipped-59"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-61"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-63"
                  >
                    segment_1
                     
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root makeStyles-root-61"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-63"
                  >
                    segment_2
                     
                    <span
                      class="makeStyles-root-60"
                    >
                      excluded
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-66"
            >
              <p
                class="MuiTypography-root makeStyles-monospace-67 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-65"
                  title="event_name"
                >
                  event_name
                </span>
                <span
                  class="makeStyles-entry-64"
                >
                  additionalProp1
                  : 
                  prop1Value
                </span>
                <span
                  class="makeStyles-entry-64"
                >
                  additionalProp2
                  : 
                  prop2Value
                </span>
                <span
                  class="makeStyles-entry-64"
                >
                  additionalProp3
                  : 
                  prop3Value
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-monospace-67 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-65"
                  title="event_without_props"
                >
                  event_without_props
                </span>
              </p>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exclusion Groups
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              aria-disabled="true"
              class="MuiChip-root Mui-disabled"
            >
              <span
                class="MuiChip-label"
              >
                tag_1
              </span>
            </div>
             
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-70 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Metrics
      </h3>
      <div
        class=""
        title="Use \\"Edit in Wizard\\" for staging experiments."
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
              />
            </svg>
            Assign Metric
          </span>
        </button>
      </div>
    </div>
    <table
      class="MuiTable-root makeStyles-metricsTable-71"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="columnheader"
            scope="col"
          >
            Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-73"
            role="columnheader"
            scope="col"
          >
            Attribution Window
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-73"
            role="columnheader"
            scope="col"
          >
            Changes Expected
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-73"
            role="columnheader"
            scope="col"
          >
            Minimum Difference
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-69 makeStyles-metricName-74"
              title="metric_1"
            >
              metric_1
            </strong>
            <br />
            <small
              class="makeStyles-monospace-69"
            >
              This is metric 1
            </small>
            <br />
            <span
              class="makeStyles-root-60"
            >
              primary
            </span>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-69"
          >
            1 week
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-69"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-69"
          >
            
            10
            <span
              class="makeStyles-tooltipped-59"
              title="Percentage points."
            >
              pp
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-69 makeStyles-metricName-74"
              title="metric_2"
            >
              metric_2
            </strong>
            <br />
            <small
              class="makeStyles-monospace-69"
            >
              This is metric 2
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-69"
          >
            1 hour
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-69"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-69"
          >
            
            0.50
             USD
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-69 makeStyles-metricName-74"
              title="metric_2"
            >
              metric_2
            </strong>
            <br />
            <small
              class="makeStyles-monospace-69"
            >
              This is metric 2
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-69"
          >
            4 weeks
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-69"
          >
            No
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-69"
          >
            
            10.50
             USD
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-69 makeStyles-metricName-74"
              title="metric_3"
            >
              metric_3
            </strong>
            <br />
            <small
              class="makeStyles-monospace-69"
            >
              This is metric 3
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-69"
          >
            6 hours
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-69"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-69"
          >
            
            1200
            <span
              class="makeStyles-tooltipped-59"
              title="Percentage points."
            >
              pp
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders as expected with conclusion data 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-panel-77 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-79 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        General
      </h3>
      <div
        class=""
        title=""
      >
        <button
          aria-label="Edit Experiment General Data"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
            Edit
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <table
      class="MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Status
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-root-83"
            >
              <span
                class="makeStyles-statusDot-88 makeStyles-disabled-87"
              />
               
              disabled
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Dates
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-root-89"
              title="20/09/2020, 20:00:00"
            >
              2020-09-21
            </span>
            <span
              class="makeStyles-to-78"
            >
              to
            </span>
            <span
              class="makeStyles-root-89"
              title="20/11/2020, 19:00:00"
            >
              2020-11-21
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Description
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-82"
            >
              Experiment with things. Change stuff. Profit.
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Owner
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-82"
            >
              owner-nickname
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            P2 Link
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-monospace-82 MuiTypography-colorPrimary"
              href="https://wordpress.com/experiment_1"
              rel="noopener noreferrer"
              target="_blank"
            >
              https://wordpress.com/experiment_1
            </a>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Assignment Cache Entry
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-82"
            >
              ✅ Fresh: Production cache is up to date, but manual sandbox updates may be needed
               (
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineAlways MuiTypography-colorPrimary"
                href="https://fieldguide.automattic.com/the-experimentation-platform/experiment-assignment-groups/#logged-out-homepage-assignments-use-file-system-cache"
                rel="noopener noreferrer"
                target="_blank"
              >
                learn more
              </a>
              )
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root makeStyles-panel-77 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-90 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Conclusions
      </h3>
      <button
        aria-label="Edit Conclusion"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
            />
          </svg>
          Edit
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <table
      class="MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Reason the experiment ended
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Ran its course.
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Conclusion URL
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <a
              href="https://betterexperiments.wordpress.com/experiment_1/conclusion"
              rel="noopener noreferrer"
              target="_blank"
            >
              https://betterexperiments.wordpress.com/experiment_1/conclusion
            </a>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Deployed variation
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            test
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root makeStyles-panel-77 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-92 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root makeStyles-audienceTable-94"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-93"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-93"
            >
              Newly signed up users (being also logged in)
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-95"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Manual Assignment
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-98"
                  >
                    <span>
                      control
                    </span>
                    <br />
                    <span
                      class="makeStyles-root-100"
                    >
                      default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-98"
                  >
                    60
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-98"
                  >
                    <span
                      class="makeStyles-tooltipped-99"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-98"
                  >
                    <span>
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-98"
                  >
                    40
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-98"
                  >
                    <span
                      class="makeStyles-tooltipped-99"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-101"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-103"
                  >
                    segment_1
                     
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root makeStyles-root-101"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-103"
                  >
                    segment_2
                     
                    <span
                      class="makeStyles-root-100"
                    >
                      excluded
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-106"
            >
              <p
                class="MuiTypography-root makeStyles-monospace-107 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-105"
                  title="event_name"
                >
                  event_name
                </span>
                <span
                  class="makeStyles-entry-104"
                >
                  additionalProp1
                  : 
                  prop1Value
                </span>
                <span
                  class="makeStyles-entry-104"
                >
                  additionalProp2
                  : 
                  prop2Value
                </span>
                <span
                  class="makeStyles-entry-104"
                >
                  additionalProp3
                  : 
                  prop3Value
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-monospace-107 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-105"
                  title="event_without_props"
                >
                  event_without_props
                </span>
              </p>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exclusion Groups
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              aria-disabled="true"
              class="MuiChip-root Mui-disabled"
            >
              <span
                class="MuiChip-label"
              >
                tag_1
              </span>
            </div>
             
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-110 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Metrics
      </h3>
      <div
        class=""
        title=""
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
              />
            </svg>
            Assign Metric
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <table
      class="MuiTable-root makeStyles-metricsTable-111"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="columnheader"
            scope="col"
          >
            Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-113"
            role="columnheader"
            scope="col"
          >
            Attribution Window
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-113"
            role="columnheader"
            scope="col"
          >
            Changes Expected
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-113"
            role="columnheader"
            scope="col"
          >
            Minimum Difference
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-109 makeStyles-metricName-114"
              title="metric_1"
            >
              metric_1
            </strong>
            <br />
            <small
              class="makeStyles-monospace-109"
            >
              This is metric 1
            </small>
            <br />
            <span
              class="makeStyles-root-100"
            >
              primary
            </span>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-109"
          >
            1 week
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-109"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-109"
          >
            
            10
            <span
              class="makeStyles-tooltipped-99"
              title="Percentage points."
            >
              pp
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-109 makeStyles-metricName-114"
              title="metric_2"
            >
              metric_2
            </strong>
            <br />
            <small
              class="makeStyles-monospace-109"
            >
              This is metric 2
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-109"
          >
            1 hour
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-109"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-109"
          >
            
            0.50
             USD
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-109 makeStyles-metricName-114"
              title="metric_2"
            >
              metric_2
            </strong>
            <br />
            <small
              class="makeStyles-monospace-109"
            >
              This is metric 2
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-109"
          >
            4 weeks
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-109"
          >
            No
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-109"
          >
            
            10.50
             USD
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-109 makeStyles-metricName-114"
              title="metric_3"
            >
              metric_3
            </strong>
            <br />
            <small
              class="makeStyles-monospace-109"
            >
              This is metric 3
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-109"
          >
            6 hours
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-109"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-109"
          >
            
            1200
            <span
              class="makeStyles-tooltipped-99"
              title="Percentage points."
            >
              pp
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders as expected without conclusion data 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-panel-117 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-119 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        General
      </h3>
      <div
        class=""
        title="Use \\"Edit in Wizard\\" for staging experiments."
      >
        <button
          aria-label="Edit Experiment General Data"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
            Edit
          </span>
        </button>
      </div>
    </div>
    <table
      class="MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Status
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-root-123"
            >
              <span
                class="makeStyles-statusDot-128 makeStyles-staging-126"
              />
               
              staging
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Dates
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-root-129"
              title="20/09/2020, 20:00:00"
            >
              2020-09-21
            </span>
            <span
              class="makeStyles-to-118"
            >
              to
            </span>
            <span
              class="makeStyles-root-129"
              title="20/11/2020, 19:00:00"
            >
              2020-11-21
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Description
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-122"
            >
              Experiment with things. Change stuff. Profit.
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Owner
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-122"
            >
              owner-nickname
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            P2 Link
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-monospace-122 MuiTypography-colorPrimary"
              href="https://wordpress.com/experiment_1"
              rel="noopener noreferrer"
              target="_blank"
            >
              https://wordpress.com/experiment_1
            </a>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Assignment Cache Entry
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-122"
            >
              ✅ Fresh: Production cache is up to date, but manual sandbox updates may be needed
               (
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineAlways MuiTypography-colorPrimary"
                href="https://fieldguide.automattic.com/the-experimentation-platform/experiment-assignment-groups/#logged-out-homepage-assignments-use-file-system-cache"
                rel="noopener noreferrer"
                target="_blank"
              >
                learn more
              </a>
              )
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root makeStyles-panel-117 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-130 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root makeStyles-audienceTable-132"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-131"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-131"
            >
              Newly signed up users (being also logged in)
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-133"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Manual Assignment
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-136"
                  >
                    <span>
                      control
                    </span>
                    <br />
                    <span
                      class="makeStyles-root-138"
                    >
                      default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-136"
                  >
                    60
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-136"
                  >
                    <span
                      class="makeStyles-tooltipped-137"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-136"
                  >
                    <span>
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-136"
                  >
                    40
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-136"
                  >
                    <span
                      class="makeStyles-tooltipped-137"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-139"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-141"
                  >
                    segment_1
                     
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root makeStyles-root-139"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-141"
                  >
                    segment_2
                     
                    <span
                      class="makeStyles-root-138"
                    >
                      excluded
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-144"
            >
              <p
                class="MuiTypography-root makeStyles-monospace-145 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-143"
                  title="event_name"
                >
                  event_name
                </span>
                <span
                  class="makeStyles-entry-142"
                >
                  additionalProp1
                  : 
                  prop1Value
                </span>
                <span
                  class="makeStyles-entry-142"
                >
                  additionalProp2
                  : 
                  prop2Value
                </span>
                <span
                  class="makeStyles-entry-142"
                >
                  additionalProp3
                  : 
                  prop3Value
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-monospace-145 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-143"
                  title="event_without_props"
                >
                  event_without_props
                </span>
              </p>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exclusion Groups
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              aria-disabled="true"
              class="MuiChip-root Mui-disabled"
            >
              <span
                class="MuiChip-label"
              >
                tag_1
              </span>
            </div>
             
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-148 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Metrics
      </h3>
      <div
        class=""
        title="Use \\"Edit in Wizard\\" for staging experiments."
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
              />
            </svg>
            Assign Metric
          </span>
        </button>
      </div>
    </div>
    <table
      class="MuiTable-root makeStyles-metricsTable-149"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="columnheader"
            scope="col"
          >
            Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-151"
            role="columnheader"
            scope="col"
          >
            Attribution Window
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-151"
            role="columnheader"
            scope="col"
          >
            Changes Expected
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-151"
            role="columnheader"
            scope="col"
          >
            Minimum Difference
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-147 makeStyles-metricName-152"
              title="metric_1"
            >
              metric_1
            </strong>
            <br />
            <small
              class="makeStyles-monospace-147"
            >
              This is metric 1
            </small>
            <br />
            <span
              class="makeStyles-root-138"
            >
              primary
            </span>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-147"
          >
            1 week
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-147"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-147"
          >
            
            10
            <span
              class="makeStyles-tooltipped-137"
              title="Percentage points."
            >
              pp
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-147 makeStyles-metricName-152"
              title="metric_2"
            >
              metric_2
            </strong>
            <br />
            <small
              class="makeStyles-monospace-147"
            >
              This is metric 2
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-147"
          >
            1 hour
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-147"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-147"
          >
            
            0.50
             USD
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-147 makeStyles-metricName-152"
              title="metric_2"
            >
              metric_2
            </strong>
            <br />
            <small
              class="makeStyles-monospace-147"
            >
              This is metric 2
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-147"
          >
            4 weeks
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-147"
          >
            No
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-147"
          >
            
            10.50
             USD
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-147 makeStyles-metricName-152"
              title="metric_3"
            >
              metric_3
            </strong>
            <br />
            <small
              class="makeStyles-monospace-147"
            >
              This is metric 3
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-147"
          >
            6 hours
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-147"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-147"
          >
            
            1200
            <span
              class="makeStyles-tooltipped-137"
              title="Percentage points."
            >
              pp
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
